# Cub3D

./: .gitignore  CMakeLists.txt  leak_check.sh  memo.txt
libft/: Makefile  ft_atoi.c  ft_atoll.c  ft_isalnum.c  ft_memmove.c  ft_strchr.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c  gnl 2.c  gnl.c  gnl_utils.c  libft.h
mini3d/: Makefile  auxiliar_funct.c  cub3d  free_info.c  game.c  get_next_line.c  input_check_args.c  input_parse_identif.c  input_read_n_validate.c  key_update.c  main.c  raycast.c  raycast_intercept.c  render_2d.c  render_3d.c  vars_create_1.c
mini3d/include/: cub3d.h
minilibx/: .gitignore  Makefile  cub.h  main.c
new/libft/: Makefile  ft_strchr.c  (+1 more)
old_functions/: start_cub3d.c
src/: Makefile  color.h  cub3d  cub3d 2  cub3d 2.h  cub3d.h  debug.c  free.c  game_init 2.c  game_init.c  game_start.c  get_step.c  init.c  init_ray.c  initialize_object.c  interception.c  judge_wall.c  key_settings.c  leak.sh  looking.c  main 2.c  main.c  memo.txt  message 2.c  message.c  moving.c  my_mlx_pixel_put.c  parse_utils.c  parser 2.c  parser.c  play_gaming.c  ray_cast_utils.c  ray_casting.c  raycasting.c  related_to_is 2.c  related_to_is.c  related_to_is2.c  related_to_is3.c  rendering 2.c  rendering.c  (+10 more)
srcs/: Makefile  cub  cub3d.h  gnl.c  gnl_utils.c  key.c  main.c
test/: norm  norm.sh  test.sh
texture/: amsterdam.xpm  block.xpm  broken.xpm  dog.xpm  horse 3.xpm  mountain 3.xpm  naruto_kyuubi.xpm  newyork.xpm  paris.xpm  rabbit.xpm  rat 3.xpm  renga.xpm  rooster.xpm  sasuke.xpm  shuriken.xpm  stone.xpm  tokyo.xpm
training/: .gitignore  Makefile  cub.h
(+130 files in other folders)
